<resources>
    <string name="app_name">AniSearch</string>
    <string name="anime_avatar">anime avatar</string>
    <string name="episode">episodes</string>
    <string name="score">Score:</string>
    <string name="by">by</string>
    <string name="users">users</string>
    <string name="rank">Rank:</string>
    <string name="popularity">, popularity:</string>
    <string name="premiered">Premiered:</string>
    <string name="filters">Filters</string>
    <string name="animes">Animes</string>
    <string name="min_score_hint">8.0</string>
    <string name="min_score">Min score:</string>
    <string name="confirm">Confirm</string>
    <string name="tv">TV</string>
    <string name="movie">movie</string>
    <string name="ova">ova</string>
    <string name="special">special</string>
    <string name="ona">ona</string>
    <string name="music">music</string>
    <string name="airing">airing</string>
    <string name="complete">complete</string>
    <string name="upcoming">upcoming</string>
    <string name="popularityRadioButton">popularity</string>
    <string name="scoreRadioButton">score</string>
    <string name="end_date">end date</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="order_by">Order by</string>
    <string name="unknown">\?</string>
    <string name="rankButton">rank</string>
    <string name="genres">Genres</string>
    <string name="network_error">No internet connection!</string>
    <string name="connection_restored">Connection restored!</string>

    <string name="no_matter">No matter</string>

    <string name="anime_status_airing">airing</string>
    <string name="anime_status_complete">complete</string>
    <string name="anime_status_upcoming">upcoming</string>

    <string name="anime_type_tv">TV</string>
    <string name="anime_type_movie">Movie</string>
    <string name="anime_type_ova">OVA</string>
    <string name="anime_type_special">Special</string>
    <string name="anime_type_ona">ONA</string>
    <string name="anime_type_music">Music</string>

    <string name="order_by_rank">Rank</string>
    <string name="order_by_popularity">Popularity</string>
    <string name="order_by_score">Score</string>
    <string name="order_by_end_date">End date</string>
    <string name="refresh">Refresh</string>
    <string name="loading">Loading…</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="profile">Profile</string>
</resources>